# mpw1-bringup

./: .gitignore  README.md
breakout_board_v1/: .gitignore  breakout_board_v1.kicad_pcb  breakout_board_v1.kicad_pro  breakout_board_v1.kicad_sch  fp-lib-table  sym-lib-table
caravel_fw/: aes_ident.S  aes_test.S  hello.S  sha_ident.S  sha_template.S  sha_test_long.S
ctrlfw/remote_ctrl_fw/: CMakeLists.txt  config.h  dac.c  datachannel.c  datachannel.h  main.c  spiflash.c  spiflash.h
ctrlfw/rp_fw/: CMakeLists.txt  dac.h  main.c
docs/: misc-notes.txt
experimental/rp_fw/: config.h
notebooks/: characterization.ipynb  dut.py  rv_utils.py  utils.py
